# kernel_shift_framework

./: .gitignore  CITATION.cff  LICENSE  PLAN.md  README.md  environment.lock.yml  environment.yml  pyproject.toml  requirements-compat.txt  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ANALYSIS_SPEC_V4.md  FINAL_RELEASE_CHECKLIST.md  LEGAL_RELEASE_NOTE.md  NETFLOW_POOLS.md  PAPER_V2_ROADMAP.md  REPRODUCIBILITY_NOTES.md  REVISION_PLAN.md  SWEEP_CLOSURE_RUNBOOK.md  VALIDATION_STATUS.md
manuscript/: cover_letter_epjqt.md  sn-article.bbl  sn-article.tex  sn-bibliography.bib
manuscript_tqe/: cover_letter.md  sn-bibliography.bib  tqe-article.bbl  tqe-article.tex
paper/: sn-article.tex  sn-bibliography.bib
results/aggregated/: AGG_ROOT_mean_std_drop__by_variant_seed_and_size.csv  AGG_ROOT_mean_std_metrics__by_variant_seed_and_size.csv  AGG_ROOT_ranking_tradeoff__by_variant_seed_and_size.csv  AGG_ROOT_topK__by_variant_seed_and_size.txt
results/csens/: family_curves.csv  ordering_stability.csv  p1c_by_setting.csv
results/dose_response/: kernel_table.csv  unit_correlations.csv
results/honest_selection/: ember_main__by_setting.csv  ember_main__stats.csv  ember_sweep__by_setting.csv  ember_sweep__stats.csv  ember_sweep_full__by_setting.csv  ember_sweep_full__stats.csv  hier_stats.csv  netflow_main__by_setting.csv  netflow_main__stats.csv  netflow_sweep__by_setting.csv  netflow_sweep__stats.csv  (+2 more)
scripts/: reproduce_v4.py
tests/: test_budget_matched_selection.py  test_hierarchical_effect_estimation.py  test_v4_protocol.py
(+10010 files in other folders)
